Proof read done. Ready to submit.

--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,7 @@
 
 % ==============================================================================
 \begin{abstract}
-This report outlines the results of my efforts on ndnMouse, my Master's Capstone project, as well as my class project for CS 217B. It is open-sourced on Github~\cite{ndnMouseGH} under the GNU public license, and freely available on the Google Play App Store~\cite{ndnMouseGP}. NdnMouse provides secure and efficient control of one or more personal computers via remote mouse movement and rudimentary keyboard commands from the user's phone, running the communication protocol over Named Data Networking (NDN)~\cite{ndn}. Benefiting from NDN's efficient multicasting performance, ndnMouse allows multiple PCs to query real-time data from a cheap Android phone without a drop in performance. While at this time there is no immediate advantage for the user to connect multiple computers to ndnMouse, the long term goal is to support seamless mouse movement across multiple monitors on two or more computers. In order to judge the design and performance benefits of NDN, ndnMouse also supports communication over UDP. Implementation of both protocols resulted in fairly unique server and clients designs. The pros and cons of each will be explored in this report.
+This report outlines the results of my efforts on ndnMouse, my Master's Capstone project, as well as my class project for CS 217B. It is open-sourced on Github~\cite{ndnMouseGH} under the GNU public license, and freely available on the Google Play App Store~\cite{ndnMouseGP}. NdnMouse provides secure and efficient control of one or more personal computers via remote mouse movement and rudimentary keyboard commands from the user's phone, running the communication protocol over Named Data Networking (NDN)~\cite{ndn}. Benefiting from NDN's efficient multicasting performance, ndnMouse allows multiple PCs to query real-time data from a low-powered Android phone without a drop in performance. While at this time there is no immediate advantage for the user to connect multiple computers to ndnMouse, the long term goal is to support seamless mouse movement across multiple monitors on two or more computers. In order to judge the design and performance benefits of NDN, ndnMouse also supports communication over UDP. Implementation of both protocols resulted in fairly unique server and clients designs. The pros and cons of each will be explored in this report.
 \end{abstract}
 
 \keywords{NDN, Mouse, Keyboard, Remote Access, Security}
@@ -42,7 +42,7 @@ By taking advantage of the local WiFi access point or the phone's WiFi hotspot f
 
 Both NDN and UDP/IP transport/routing protocols are supported, encrypting packets with AES if a password is provided by the user. Additionally NDN can provide some extra features in the form of interest (query) condensing, allowing the phone server to better scale its performance when multiple PC clients are connected. More on this idea will be described in Section~\ref{sec:performance}. However the protocol choice should ideally be transparent to the user, as all ndnMouse features are supported on both NDN and UDP.
 
-For the rest of this report, Section~\ref{sec:overview} review the features ndnMouse, with more detail of the command protocol in Section~\ref{sec:protocol}. Details on the security features will be given in Section~\ref{sec:security}, with challenges and trade-offs I have overcome listed in Section~\ref{sec:challenges}. Performance analysis comparing NDN and UDP implementations is in Section~\ref{sec:performance}. Section~\ref{sec:extensions} explores extensions and future use cases for ndnMouse, and Section~\ref{sec:relatedwork} looks at some of the related work in this area. Finally Section~\ref{sec:conclusion} concludes this report. Additionally screenshots of the application are in Section~\ref{sec:appendix}, the Appendix.
+For the rest of this report, Section~\ref{sec:overview} review the features ndnMouse, with more detail of the command protocol in Section~\ref{sec:protocol}. Details on the security features will be given in Section~\ref{sec:security}, with challenges and trade-offs of ndnMouse listed in Section~\ref{sec:challenges}. Performance analysis comparing NDN and UDP implementations is in Section~\ref{sec:performance}. Section~\ref{sec:extensions} explores extensions and future use cases for ndnMouse, and Section~\ref{sec:relatedwork} looks at some of the related work in this area. Finally Section~\ref{sec:conclusion} concludes this report. Additionally screenshots of the application are in Section~\ref{sec:appendix}, the Appendix.
 
 \subsection{Features}
 NdnMouse supports full mouse control: relative cursor movement, left click, right click, and a shortcut allowing tap-to-click on the touchpad. Sensitivity and precision settings are also provided, for fine tuning the feel of the movement. Two-finger scrolling works similarly to Apple laptops, with inversion and sensitivity settings as well. Rudimentary keyboard support allows the user to execute common slideshow control commands, such as using the arrow keys or the spacebar to easily change slides. Additionally custom typed messages are supported, allowing the user to type any message using the built-in Android keyboard. Upon sending the message, all receiving client PCs will then virtually type the characters out instantly on whatever program window is selected at that time.
@@ -50,7 +50,7 @@ NdnMouse supports full mouse control: relative cursor movement, left click, righ
 The security for ndnMouse was designed to defend against packet snooping, replay attacks, privacy attacks, and brute force attacks. More details will be given in Section~\ref{sec:security}. The user may also choose to not use a password, which sends the communication protocol in cleartext and avoids a minor amount of encryption/decryption overhead. 
 
 \subsection{Supported Platforms}
-NdnMouse is composed of two applications: the server/producer Java application (running on the Android phone), and the client/consumer Python application (running on the PC). Any relatively modern Android phone is supported (Android 4.1 and up), and basically any PC that can run NDN's Network Forwarding Daemon (NFD)~\cite{nfd} and Python3~\cite{python3}. Since Python runs on the three major operating systems (Linux, OSX, and Windows), the limiting factor is NFD, which only currently runs on Linux and OSX. However Windows users can still use ndnMouse by limiting their protocol choice to UDP only.
+NdnMouse is composed of two applications: the server/producer Java application (running on the Android phone), and the client/consumer Python application (running on the PC). Any relatively modern Android phone is supported (Android 4.1 and up), and basically any PC that can run NDN's Network Forwarding Daemon (NFD)~\cite{nfd} and Python3 \cite{python3}. Since Python runs on the three major operating systems (Linux, OSX, and Windows), the limiting factor is NFD, which only currently runs on Linux and OSX. However Windows users can still use ndnMouse by limiting their protocol choice to UDP only.
 
 Other dependencies include a few Python libraries needed for the PC client, specifically PyAutoGUI~\cite{pyautogui}, PyCrypto~\cite{pycrypto}, and PyNDN~\cite{pyndn}. PyAutoGUI provides mouse and keyboard control, as well as some simple dialog boxes for collecting user input. PyCrypto handles all the cryptography operations, and PyNDN provides the API for using NDN and for interfacing with NFD. The Android application uses jNDN~\cite{jndn} to access the NDN API, but this library comes compiled into ndnMouse's APK and requires no outside installation by the user. Both the PC and Android phone must have NFD installed and running to communicate over NDN.
 
@@ -65,7 +65,7 @@ Only a minor amount of session upkeep is needed by the ndnMouse client, which se
 
 Without a password (all security off), packets are transmitted in cleartext and are at most 16 bytes. The ndnMouse UDP communication protocol uses connection-oriented communication by having the client send an \texttt{OPEN} message to the server, similar to a TCP \texttt{SYN} packet. This asks the server to establish a \textit{session} between the client and itself. An \texttt{OPEN-ACK} reply message is used to respond to the \texttt{OPEN} message and completes the connection setup.
 
-Once a session is established, the server will send unsolicited mouse commands\footnote{I will refer to all commands ndnMouse can send as mouse commands, though this includes supported keyboard commands as well.} to its clients. The data format is not strict across all possible mouse commands, but generally takes the form of one character dictating the type of command, followed by any additional information for that command. For example, a mouse movement command is of the form \texttt{M<x-4B><y-4B>}. I denote the \textit{x} and \textit{y} values each have a fixed length of 4 bytes by appending "\texttt{4B}." See \hyperlink{tab:msgFormat}{Table 1} for the supported, non-secure message formats.
+Once a session is established, the server will send unsolicited mouse commands\footnote{I will refer to all commands ndnMouse can send as mouse commands, though this includes supported keyboard commands as well.} to its clients. The data format is not strict across all possible mouse commands, but generally takes the form of one character dictating the type of command, followed by any additional information for that command. For example, a mouse movement command is of the form \texttt{M<x-4B><y-4B>}. I denote the \textit{x} and \textit{y} values each have a fixed length of 4 bytes by appending ``\texttt{4B}.'' See \hyperlink{tab:msgFormat}{Table 1} for the supported, non-secure message formats.
 
 \begin{table}
 	\hypertarget{tab:msgFormat}{}
@@ -83,11 +83,11 @@ Once a session is established, the server will send unsolicited mouse commands\f
 	\end{center}
 \end{table}
 
-Heartbeat messages are sent every one second to keep the connection alive when no other mouse command packets are being sent. The client query packet contains the message \texttt{HEART}, and the server reply contains the message \texttt{BEAT}. The main goal of heartbeats was to detect when the server had lost its session with the client, such as during a server reset or crash. In these cases, the client would miss a certain number of heartbeat replies from the server, triggering a session restart on the client side. The client would then try to open a new session using \texttt{OPEN} messages. After receiving a \texttt{OPEN-ACK}, the session would resume normal activity.
+Heartbeat messages are sent every one second to keep the connection alive when no other mouse command packets are being sent. The client query packet contains the message \texttt{HEART}, and the server reply contains the message \texttt{BEAT}. The main goal of heartbeats is to detect when the server has lost its session with the client, such as during a server reset or crash. In these cases, the client will miss a certain number of heartbeat replies from the server, triggering a session restart on the client side. The client will then try to open a new session using \texttt{OPEN} messages. After receiving a \texttt{OPEN-ACK}, the session will resume normal activity.
 
-Lastly a \texttt{CLOSE} message is sent by the client upon exiting the application. This lets the server know that it can stop sending unsolicited mouse command messages. Note that the simple, connection-oriented communication I implemented on top of UDP does not provide reliable delivery or in-order processing of packets. Its only purpose was to allow ndnMouse to gracefully recover from server/client connection problems. For example, if the server (phone) silently dies or resets, then without some kind heartbeat the client would never find out, and would not receive any further unsolicited mouse commands. By having a simple heartbeat, the client can detect a service disruption and quickly resolve it by establishing a new session. This provides a better user experience than having to restart both the server and client when something goes wrong.
+Lastly a \texttt{CLOSE} message is sent by the client upon exiting the application. This lets the server know that it can stop sending unsolicited mouse command messages. Note that the simple, connection-oriented communication I implemented on top of UDP does not provide reliable delivery or in-order processing of packets. Its only purpose is to allow ndnMouse to gracefully recover from server/client connection problems. For example, if the server (phone) silently dies or resets, then without some kind heartbeat the client would never find out, and would not receive any further unsolicited mouse commands. By having a simple heartbeat, the client can detect a service disruption and quickly resolve it by establishing a new session. This provides a better user experience than having to restart both the server and client when something goes wrong.
 
-When security features are turned on, the UDP communication protocol becomes slightly more complex to prevent specific types of malicious attacks. Both the packet format and the payload message require changes. In \hyperlink{tab:secureMsgFormat}{Table 2}, the secure message formats are listed. A four byte sequence number is added to the front of each message, and then the entire message will then be encrypted, as described in the Section~\ref{sec:mousepackets} on Mouse Packets. The message length is also fixed to 16 bytes, using PKCS5 padding~\cite{rfc8018}.
+When security features are turned on, the UDP communication protocol becomes slightly more complex to prevent specific types of malicious attacks. Both the packet format and the payload message require changes. In \hyperlink{tab:secureMsgFormat}{Table 2}, the secure message formats are listed. A four byte sequence number is added to the front of each message, and then the entire message will then be encrypted, as described in Section~\ref{sec:mousepackets} on Mouse Packets. The message length is also fixed to 16 bytes, using PKCS5 padding~\cite{rfc8018}.  \\ % Pushes NDN subsection over to next page 
 
 \begin{table}
 	\hypertarget{tab:secureMsgFormat}{}
@@ -108,7 +108,7 @@ When security features are turned on, the UDP communication protocol becomes sli
 \subsection{NDN}
 When designing the NDN communication protocol, I found that the architecture would have to differ significantly from the UDP communication style. The consumer/producer\footnote{For NDN, the consumer can be thought of as the client, and the producer as the server. I may use these terms interchangeably as they are closely related.} relationship encourages the use of connectionless communication. In this way, the consumer can easily get the data it requests without worrying about where it comes from (location), as NDN data packets are immutable and authenticated via a signature. However note that I do not validate the signature on my NDN produced packets, and my reasons for this are given in Section~\ref{sec:sigval}. NdnMouse's NDN communication protocol also uses the same message formats given in Table 1 and 2. The only difference is how they are retrieved by clients/consumers.
 
-To allow multiple consumers (PCs) to share the same data packets (from the Android phone producer), I chose to use a connectionless design. That is, each data packet contained no consumer-specific state. All consumers could share and process the same real-time, mouse command data. The connectionless design also fit well with the NDN callback-oriented library, where all communication activity on the server/producer is handled by a single main thread, set up beforehand to serve particular named interests. Contrast this to ndnMouse's UDP communication protocol, which spins off worker threads to handle each client separately. There is no need to do this with NDN as the connectionless design lets the producer be consumer agnostic: all consumers receive the same data from the producer for any given interest. The NDN producer is set up to serve the interest names given in \hyperlink{tab:ndnInterestNames}{Table 3}. The sequence number and password salt interests are only used when ndnMouse has security turned on.
+To allow multiple consumers (PCs) to share the same data packets (from the Android phone producer), I chose to use a connectionless design. That is, each data packet contains no consumer-specific state. All consumers can share and process the same real-time, mouse command data. The connectionless design also fit well with the NDN callback-oriented library, where all communication activity on the server/producer is handled by a single main thread, set up beforehand to serve particular named interests. Contrast this to ndnMouse's UDP communication protocol, which spins off worker threads to handle each client separately. There is no need to do this with NDN as the connectionless design lets the producer be consumer agnostic: all consumers receive the same data from the producer for any given interest. The NDN producer is set up to serve the interest names given in \hyperlink{tab:ndnInterestNames}{Table 3}. The sequence number and password salt interests are only used when ndnMouse has security turned on.
 
 \begin{table}
 	\hypertarget{tab:ndnInterestNames}{}
@@ -129,7 +129,7 @@ While the NDN producer may run a connectionless communication protocol when secu
 
 \subsection{Mouse Packets}
 \label{sec:mousepackets}
-For non-secure communication, mouse packets are exactly the same as the message formats listed in \hyperlink{tab:msgFormat}{Table 1}. In those cases, the payload is the entire packet. When security is on, then additional information must be carried with the payload, and encryption is performed on select segments of the mouse packet. Specifically a 16 byte initialization vector (IV) is prepended to the front of every message, which will be used with AES encryption. More information on this will be given in security Section~\ref{sec:security}. Additionally the total packet length is fixed at 32 bytes, and encryption is only performed on bytes 17-32. See \hyperlink{fig:mousePacketDescription}{Figure 1} for a visual representation of the secure mouse packet.
+For non-secure communication, mouse packets are exactly the same as the message formats listed in \hyperlink{tab:msgFormat}{Table 1}. In those cases, the payload is the entire packet. When security is on, then additional information must be carried with the payload, and encryption is performed on select segments of the mouse packet. Specifically a 16 byte initialization vector (IV) is prepended to the front of every message, which will be used with AES encryption. More information on this will be given in security section~\ref{sec:security}. Additionally the total packet length is fixed at 32 bytes, and encryption is only performed on bytes 17-32. See \hyperlink{fig:mousePacketDescription}{Figure 1} for a visual representation of the secure mouse packet.
 
 \begin{figure*}
 	\hypertarget{fig:mousePacketDescription}{}
@@ -255,7 +255,7 @@ Interest collapsing by NFD may be another contributing factor for the enhanced s
 \subsection{Multi-Threaded Architecture}
 UDP's implementation took on a traditional multi-threaded approach, spinning off a new worker thread for each additional client. While this approach worked well for a single client, even just adding a second client increased the thread management overhead significantly, dropping the performance by half. The UDP clients must also keep track of more state than their NDN counterparts (like using heartbeats), in order to reap the performance benefits of unsolicited data.
 
-There may be performance optimizations that could help the UDP server scale better on cheap Android phones. It might be possible to push more responsibility on a single worker thread, rather than spinning off new threads each time another client arrives. However this would also increase the complexity of the implementation, by forcing one thread to juggle several different states for different clients.
+There may be performance optimizations that could help the UDP server scale better on cheap Android phones. It might be possible to push more responsibility on a single worker thread, rather than spinning off new threads each time another client arrives. However this would also increase the complexity of the implementation, by forcing one thread to juggle several different states for different clients.  \\ % Pushes Extensions section to next column
 
 % ==============================================================================
 \section{Extensions}
@@ -277,7 +277,7 @@ A common feature request\footnote{Idea credit goes to Dr. Lixia Zhang.} for ndnM
 In order to support this feature, ndnMouse would require an architectural rework. Currently the phone acts as the server/producer, and the multiple PCs connecting to it act as the clients/consumers. Each PC must reach out to connect to the desired phone (via IP address). The many mice to one pc relationship inverts this, so that the PC is now the server/producer, serving the many mice connecting to it. Mice would have to explicitly reach in to connect to single PC, entering its IP address to properly connect. There may be a feasible solution that allows both relationships to work (one mouse to many PCs, or many mice to one PC), but more architectural design work is required to understand the additional requirements this would impose on ndnMouse.
 
 \subsection{Additional Wireless Interface Support}
-NdnMouse currently only supports communication over a local WiFi access point or via the phone's WiFi hotspot feature. However users may wish to use other wireless interfaces, like Bluetooth or WiFi Direct. At the time of ndnMouse's design, NFD only supported standard Ethernet and WiFi interfaces. However during this quarter, two students in CS 217B have been working on NFD support for Bluetooth and WiFi Direct (on PCs). When support for these interfaces is complete, it would be greatly beneficial to the ndnMouse users to receive additional wireless interface options to simplify connection setup in times when local WiFi access points are not available.
+NdnMouse currently only supports communication over a local WiFi access point or via the phone's WiFi hotspot feature. However users may wish to use other wireless interfaces, like Bluetooth or WiFi Direct. At the time of ndnMouse's design, NFD only supported standard Ethernet and WiFi interfaces. However during this quarter, two students in CS 217B have been working on NFD support for Bluetooth and WiFi Direct (on PCs). When support for these interfaces is complete, it would be greatly beneficial to ndnMouse users to receive additional wireless interface options to simplify connection setup in times when local WiFi access points are not available.
 
 \subsection{Cross-Computer Mouse Support}
 \label{sec:crossCompMouseSupport}
@@ -292,21 +292,23 @@ These are just some of the extension ideas that show the promise of ndnMouse, an
 \label{sec:relatedwork}
 There are no known NDN applications that serve as real-time control applications. Some tools are available that support that real-time synchronization of data, such as ChronoSync \cite{chronosync}. However applications that use this tool, like NDN Whiteboard~\cite{ndn-whiteboard}, are more latency tolerant than ndnMouse. NDN Whiteboard propagates changes on a shared drawing canvas to other users viewing the same whiteboard. Lower latency provides a better collaboration experience, but eventual consistency is good enough for this application. The same cannot be said for ndnMouse, which requires a low enough latency to allow remote control of a mouse pointer, displayed on different screen than the one taking user input.
 
-Alternatively, there is plenty of related work in the field of remote mouse and keyboard control (though not communicating over NDN). Searching Github, I found many open-source mouse control applications, but none of them I found implemented any security features. Two relatively popular Github repositories, Android Desktop Remote Control~\cite{justintaylor} and Mobile Mouse~\cite{mobilemouse}, had basic mouse and keyboard control features, but no security features were included. Neither of them appeared to be released on the Google Play store. 
+As I mentioned in the Extensions section, Synergy~\cite{synergy} provides cross-computer mouse support by having the server PC sending control messages to all the client PCs. Synergy does not support remote control via a mobile device however. NdnMouse is a step in that direction, ideally using NDN to provide a more efficient method of multicasting to multiple clients.
 
-Android Desktop Remote Control uses UDP datagrams, while Mobile Mouse uses a TCP socket. Also both applications use a different server/client setup than ndnMouse. The PC acts as the server, while the Android phone acts as the client (ndnMouse has the opposite configuration). The advantage of the server-PC/client-phone configuration is that it may allow multiple phones to control a single PC. However, after examining the code of these two Githubs, it does not appear that the code architecture would allow this. Only one thread is created on server instantiation, which can only serve one client phone at a time.
+There is plenty of related work in the field of remote mouse and keyboard control (though not communicating over NDN). Searching Github, I found many open-source mouse control applications, but none of them I found implemented any security features. Two relatively popular Github repositories, Android Desktop Remote Control~\cite{justintaylor} and Mobile Mouse~\cite{mobilemouse}, had basic mouse and keyboard control features, but no security features were included. Neither of them appeared to be released on the Google Play store. 
 
-As for closed-source, mouse control applications, there are numerous free Android apps on the Google Play store. I chose two of the most popular ones (5-10 million installs category) and tested them out. Remote Mouse~\cite{remotemouse} is ad-supported with additional in-app purchases to unlock additional features. The base model is still well-featured, with many additional shortcuts and PC control options. The architecture defines the PC as the server, with connecting Android phones as the clients. Multiple phones may connect to control a single PC server. By using Wireshark~\cite{wireshark} to snoop packets between my phone and PC, I was able to analyze some of their communication protocol. Remote Mouse uses both UDP and TCP packets, where TCP is primarily used for setup and teardown of sessions. The UDP control packets were resistant to temporary network loss, as the session resumed control after WiFi was restored. 
+Android Desktop Remote Control uses UDP datagrams, while Mobile Mouse uses a TCP socket. Both applications use a different server/client setup than ndnMouse. The PC acts as the server, while the Android phone acts as the client (ndnMouse has the opposite configuration). The advantage of the server-PC/client-phone configuration is that it may allow multiple phones to control a single PC. However, after examining the code of these two Githubs, it does not appear that the code architecture would allow this. Only one thread is created on server instantiation, which can only serve one client phone at a time.
 
-Security is laughable on Remote Mouse, in that it provides almost no protection from privacy attacks or replay attacks. The password authorization challenge always has the phone reply with the same hash (for a given password). This could easily be replayed to gain false authorization. No encryption is used for mouse commands, and keyboard typing uses some form of a Ceasar Cipher, shifting the character ASCII-encoding by a constant amount. It would be trivial to perform a man-in-the-middle attack and decode all typed characters sent from the phone.
+As for closed-source, mouse control applications, there are numerous free Android apps on the Google Play store. I chose two of the most popular ones (reported to have 5-10 million installs) and tested them out. Remote Mouse~\cite{remotemouse} is ad-supported with additional in-app purchases to unlock extra features. The base model is still well-featured, with many additional shortcuts and PC control options. The architecture defines the PC as the server, with connecting Android phones as the clients. Multiple phones may connect to control a single PC server. By using Wireshark~\cite{wireshark} to snoop packets between my phone and PC, I was able to analyze some of their communication protocol. Remote Mouse uses both UDP and TCP packets, where TCP is primarily used for setup and teardown of sessions. The UDP control packets were resistant to temporary network loss, as the session resumed control after WiFi was restored on the phone client. 
 
-The other popular Android app, WiFi Mouse~\cite{wifimouse}, has a similarly free base application, with ads and paid additional features. Multiple phone clients can control a single PC server. TCP packets are used for all communication, but sessions cannot survive temporary network loss. No errors were reported by the client or server, but mouse and keyboard control no longer worked after toggling WiFi. Security is abysmal on this app, as a non-configurable 4 digit password is set automatically by the server. Authorization is needed to establish the initial TCP connection, but the challenge response hash given by the phone never changes (for a given password). All TCP data is cleartext, including keyboard messages, making it extremely easy to snoop sensitive information by following the TCP stream in Wireshark. Lastly, the server application reports currently running applications on your PC to the phone in cleartext. See \hyperlink{fig:snoop}{Figure 5} for an example. I can only guess this is some violation of privacy, as their privacy policy does not state they collect this type of information.
+Security is laughable on Remote Mouse, in that it provides almost no protection from privacy attacks or replay attacks. The phone client always responds to the password authorization challenge with the same hash (for a given password). This could easily be replayed to gain false authorization. No encryption is used for mouse commands, and keyboard typing uses some form of a Ceasar Cipher, shifting the character ASCII-encoding by a constant amount. It would be trivial to perform a man-in-the-middle attack and decode all typed characters sent from the phone.
+
+The other popular Android app, WiFi Mouse~\cite{wifimouse}, has a similarly free base application, with ads and paid additional features. Multiple phone clients can control a single PC server. TCP packets are used for all communication, but sessions cannot survive temporary network loss. No errors were reported by the client or server, but mouse and keyboard control no longer worked after toggling WiFi. Security is abysmal on this app, as a non-configurable 4 digit password is set automatically by the server. Authorization is needed to establish the initial TCP connection, but the challenge response hash sent by the phone never changes (for a given password). All TCP data is cleartext, including keyboard messages, making it extremely easy to snoop sensitive information by following the TCP stream in Wireshark. Lastly, the server application reports currently running applications on your PC to the phone in cleartext. See \hyperlink{fig:snoop}{Figure 5} for an example. I can only guess this is some violation of privacy, as their privacy policy does not state they collect this type of information.
 
 \begin{figure}
 	\centering
 	\hypertarget{fig:snoop}{}
 	\includegraphics[width=8cm]{screenshots/snoop.png}
-	\caption{Snooping "secure" data from WiFi Mouse}
+	\caption{Snooping ``secure'' data from WiFi Mouse}
 \end{figure}
 
 After completing this related work research, I would recommend staying away from closed-source, mouse control Android apps. It is highly likely that no real security is implemented, and they may even be violating your privacy. Contrast that to ndnMouse, which implements powerful security and presents its code freely and openly to the community.
@@ -316,10 +318,10 @@ After completing this related work research, I would recommend staying away from
 \label{sec:conclusion}
 This report has presented a new application for NDN, enabling users to securely control their PCs from across the room. NdnMouse provides all the features one would expect from a laptop trackpad, and adds supplementary keyboard support for slideshow presentations. Security was a focus of this application during development, and ndnMouse runs its own custom, secure communication protocol to thwart a majority of common attacks. By pressing forward with new NDN applications, it becomes easier to see how NDN can improve the overall security and efficiently of the Internet. 
 
-NdnMouse still has room to grow and this reports shows there are plenty of potential extensions which would help ndnMouse serve more users. Additionally ndnMouse helps uncover areas where NDN could use more optimization, demonstrating the performance differences between UDP and NDN server/client implementations. Overall the performance of single client NDN is still respectable compared to that of UDP, considering the additional layers of software and translation NFD adds to the stack. However the scaling performance of NDN is the real star of the show, and demonstrates how next-generation multicast applications can benefit from having a new "narrow waist of the Internet."
+NdnMouse still has room to grow and this reports shows there are plenty of potential extensions which would help ndnMouse serve more users. Additionally ndnMouse helps uncover areas where NDN could use more optimization, demonstrating the performance differences between UDP and NDN server/client implementations. Overall the performance of single client NDN is still respectable compared to that of UDP, considering the additional layers of software and translation NFD adds to the stack. However the scaling performance of NDN is the real star of the show, and demonstrates how next-generation multicast applications can benefit from having a new ``narrow waist of the Internet.''
 
 \section{Acknowledgments}
-Thank you to Alex Afanasyev for providing valuable feedback during the writing of this paper.
+Thank you to Alex Afanasyev for providing valuable feedback during the writing of this paper. Thank you to Lixia Zhang for advising me many times in office hours throughout this project.
 
 % ==============================================================================
 % Bibliography
